feat: Add Docker Compose setup with Prowlarr, PostgreSQL, and Redis integration

--- a/catalogs/Dockerfile
+++ b/catalogs/Dockerfile
@@ -5,8 +5,8 @@ RUN apk update && apk upgrade && \
 
 WORKDIR /home/node/app
 
-COPY ./catalogs .
-COPY ./addon ../addon
-RUN npm ci --only-production
+COPY ./catalogs/ .
+COPY ./addon/ ../addon/
+RUN npm install --only=production
 
 CMD [ "node", "index.js" ]
