--- a/addon/package.json
+++ b/addon/package.json
@@ -9,7 +9,6 @@
   "author": "TheBeastLT <pauliox@beyond.lt>",
   "license": "MIT",
   "dependencies": {
-    "@keyv/mongo": "^3.0.1",
     "@putdotio/api-client": "^8.42.0",
     "all-debrid-api": "^1.2.0",
     "axios": "^1.7.7",
@@ -27,6 +26,7 @@
     "premiumize-api": "^1.0.3",
     "prom-client": "^14.2.0",
     "real-debrid-api": "git://github.com/TheBeastLT/node-real-debrid.git#d1f7eaa8593b947edbfbc8a92a176448b48ef445",
+    "redis": "^4.6.13",
     "request-ip": "^3.3.0",
     "router": "^1.3.8",
     "sequelize": "^6.29.0",
@@ -34,5 +34,8 @@
     "swagger-stats": "^0.99.7",
     "ua-parser-js": "^1.0.36",
     "user-agents": "^1.0.1444"
+  },
+  "devDependencies": {
+    "eslint": "^9.21.0"
   }
 }
