--- a/catalogs/package.json
+++ b/catalogs/package.json
@@ -12,7 +12,7 @@
   "author": "TheBeastLT <pauliox@beyond.lt>",
   "license": "MIT",
   "dependencies": {
-    "@keyv/mongo": "^3.0.1",
+    "redis": "^4.6.13",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "moment": "^2.30.1",
