feat: Add API key authentication and admin management
- Implement API key validation middleware for secure addon access
- Create admin authentication routes for API key management
- Add admin HTML page with API key creation, listing, and deactivation
- Update docker-compose and README with admin credentials configuration
- Modify landing page to require API key during addon configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       - PROWLARR_SEARCH_LIMIT=100
       - PROWLARR_PARALLEL_REQUESTS=10
       - OMDB_API_KEY=${OMDB_API_KEY:-}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
     ports:
       - "7000:7000"
 
