--- a/addon/package.json
+++ b/addon/package.json
@@ -12,12 +12,12 @@
     "@putdotio/api-client": "^8.42.0",
     "all-debrid-api": "^1.2.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cacheable": "^1.8.4",
     "cors": "^2.8.5",
     "debrid-link-api": "^1.0.1",
     "express-rate-limit": "^6.7.0",
     "magnet-uri": "^6.2.0",
-    "name-to-imdb": "^3.0.4",
     "named-queue": "^2.2.1",
     "offcloud-api": "^1.0.2",
     "p-limit": "^5.0.0",
