refactor: Restructure project for simplified Docker deployment
- Move Dockerfile to project root
- Update docker-compose.yml to build from project root
- Remove redundant .dockerignore file
- Adjust serverless.js to use relative static file path
- Add package.json and package-lock.json to project root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
   # Torrentio Addon service
   torrentio-addon:
     build:
-      context: ./addon
+      context: ./
     container_name: torrentio-addon
     restart: unless-stopped
     depends_on:
